<resources>
    <string name="app_name">MyChat</string>
    <string name="login_now">Login now</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">REGISTER</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="please_register_for_an_account">Please register for an account</string>
    <string name="hello">Hello</string>
    <string name="image_logo">logo</string>
    <string name="register_now">Register now</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">LOGIN</string>
    <string name="please_login_to_your_account">Please login to your account</string>
    <string name="logout">Logout</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Chats</string>
    <string name="tab_text_2">Contacts</string>
    <string name="about">About</string>
    <string name="about_app"><b>My Chat</b> is a simple chat android application
        developed with an aim of demonstrating how to build a realtime communication
        application using firebase. Its developed using Kotlin, firebase realtime
        database and modern android libraries. </string>
    <string name="about_dev">Ng\'ang\'a Victor is a mobile applications developer and an open source enthusiast.</string>
    <string name="github_link"><a href="https://github.com/ngangavic">https://github.com/ngangavic</a></string>
</resources>